assert-struct/tests/snapshots/closures__basic_closure_failure.snap
---
source: assert-struct/tests/closures.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/closures_errors/basic_closure_failure.rs:21:20
   |
21 |             value: |x| *x > 40, // This should fail
   |                    ^ closure condition not satisfied, got 30
